--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
         	<groupId>io.awspring.cloud</groupId>
         	<artifactId>spring-cloud-starter-aws-messaging</artifactId>
     	</dependency>
+    	
+    	<dependency>
+  			<groupId>com.twilio.sdk</groupId>
+  			<artifactId>twilio</artifactId>
+  			<version>9.8.0</version>
+  			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
